k8s/delivery-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: delivery-service
  namespace: skydash

spec:
  replicas: 1

  selector:
    matchLabels:
      app: delivery-service

  template:
    metadata:
      labels:
        app: delivery-service

    spec:
      containers:
        - name: delivery-service
          image: delivery-service:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5003
