k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-service
  namespace: skydash

spec:
  replicas: 1

  selector:
    matchLabels:
      app: order-service

  template:
    metadata:
      labels:
        app: order-service

    spec:
      containers:
        - name: order-service
          image: order-service:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5005
