k8s/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: payment-service
  namespace: skydash

spec:
  replicas: 1

  selector:
    matchLabels:
      app: payment-service

  template:
    metadata:
      labels:
        app: payment-service

    spec:
      containers:
        - name: payment-service
          image: payment-service:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5004
