k8s/delivery-frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: delivery-frontend
  namespace: skydash

spec:
  selector:
    app: delivery-frontend

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

  type: ClusterIP
