k8s/delivery-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: delivery-service
  namespace: skydash

spec:
  selector:
    app: delivery-service

  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003

  type: ClusterIP
