k8s/order-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: order-service
  namespace: skydash

spec:
  selector:
    app: order-service

  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5005

  type: ClusterIP
