k8s/payment-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: payment-service
  namespace: skydash

spec:
  selector:
    app: payment-service

  ports:
    - protocol: TCP
      port: 5004
      targetPort: 5004

  type: ClusterIP
