k8s/restaurant-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: restaurant-service
  namespace: skydash

spec:
  selector:
    app: restaurant-service

  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002

  type: ClusterIP
