k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skydash-ingress
  namespace: skydash

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000

          # Auth Service
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5001

          # Restaurant Service
          - path: /api/restaurant
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 5002

          - path: /api/superadmin
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 5002

          - path: /api/food-items
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 5002

          # Order Service
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 5005

          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 5005

            # Payment Service
          - path: /api/payment
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 5004
